--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-            context.fillStyle = 'skyblue';
+            context.fillStyle = 'rgba(135,206,250,1.0)';
             context.lineJoin = 'round';
             context.fillRect(460,50,60,20);
             context.strokeStyle = 'blue';
@@ -43,9 +43,9 @@
 
             context.strokeStyle = 'black';
 
-            context.font = '15px Helveca';
-            context.fontStyle = 'white';
-            context.fillText('지원',475,70);
+            context.font = '13px Helveca';
+            context.fillStyle = 'White';
+            context.fillText('지원',478,66);
             
             // context.beginPath();
             // context.rect(750,150,150,100);
